<resources>
    <string name="app_name">Store App</string>
    <string name="product_name">Product Name</string>
    <string name="hint_product_name">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="phone">Phone</string>
    <string name="sale">Sale Offer</string>
    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to add edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>
    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor menu option to delete product and leave editor [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <string name="no_sale">No Sale</string>
    <string name="has_sale">Sale Offer</string>
    <string name="editor_insert_all_product_info">Please enter all product information</string>
    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when existing product has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when existing product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Title text for the empty view, which describes the empty cart image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your cart seems to be empty...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="product_out_of_stock">Product is out of stock</string>
    <string name="sale_process_failed">Sale process failed</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_product_dialog_msg">Delete this product?</string>

    <!-- Dialog message to ask the user to confirm deleting all products [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="tel">tel:</string>
    <string name="increment_button">+</string>
    <string name="decrement_button">-</string>
    <string name="quantity_default_vlaue">10</string>
</resources>
